# rust-todo-crud

./: Cargo.toml  README.md
src/: main.rs
templates/: index.html  todos.html
