[package]
name = "rust-todo-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = {version = "0.6.20", features = ["macros"]}
dotenv = "0.15.0"
serde = "1.0.188"
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
tide-tera = "0.2.4"
tokio = {version = "1.33.0", features = ["full"]}
