[package]
name = "rust-todo-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = "0.12.1"
askama_axum = "0.3.0"
async_once = "0.2.6"
axum = {version = "0.6.20", features = ["macros", "multipart"]}
dotenv = "0.15.0"
minijinja = {version = "1.0.8", features = ["serde_json", "loader"]}
once_cell = "1.18.0"
serde = "1.0.188"
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
tokio = {version = "1.33.0", features = ["full"]}
